# ircmsg

./: LICENSE  README.md  meson.build  meson_options.txt
docs/: parser.md  serializer.md
include/ircmsg/: parser.h  serializer.h
src/: parser.c  serializer.c
test/: meson.build  parser_failure.c  parser_success.c  parser_test.c  parser_test.h  serializer_basic.c  serializer_length.c  serializer_test.c  serializer_test.h
test/compliance-tests/: README  join_test.c.in  join_test.py  meson.build  split_test.c.in  split_test.py
